--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Test git commit message
         run: |
           echo '### 1'
-          echo $COMMIT_MSG
+          echo startsWith('[patch] commit message', '[patch]')
           echo '### 2'
           echo $(git log --format=%B -n 1 HEAD)
+          
       # npx cut-release ${{ github.event.head_commit.message }}
