--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Test git commit message
         run: |
           echo '### 1'
-          echo startsWith('[patch] commit message', '[patch]')
+          echo $(startsWith('[patch] commit message', '[patch]'))
           echo '### 2'
           echo $(git log --format=%B -n 1 HEAD)
           
