--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,11 @@ jobs:
           fetch-depth: 2
       # Runs a set of commands using the runners shell
       - name: Test git commit message
+        env:
+          COMMIT_MSG: ${{ github.event.head_commit.message }}
         run: |
           echo '### 1'
-          echo $(startsWith("[patch] commit message", "[patch]"))
+          echo $COMMIT_MSG
           echo '### 2'
           echo $(git log --format=%B -n 1 HEAD)
           
