--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,10 @@ jobs:
           fetch-depth: 2
       # Runs a set of commands using the runners shell
       - name: Test git commit message
-        env:
-          COMMIT_MSG: ${{ github.event.head_commit.message }}
         run: |
           echo '### 1'
-          echo $COMMIT_MSG
-          echo '### 2'
           echo $(git log --format=%B -n 1 HEAD)
+          echo '### 2'
+          echo $(git log --format=%B -n 1 HEAD)  | grep -q [^]]
           
       # npx cut-release ${{ github.event.head_commit.message }}
