--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,9 @@ jobs:
           fetch-depth: 2
       # Runs a set of commands using the runners shell
       - name: Test git commit message
+        if: "contains(github.event.head_commit.message, '[patch]')"
         run: |
-          echo '### 1'
+          echo '### Is Patch'
           echo $(git log --format=%B -n 1 HEAD)
-          echo '### 2'
-          echo $(git log --format=%B -n 1 HEAD  | grep -q [^]])
           
       # npx cut-release ${{ github.event.head_commit.message }}
