--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     environment: staging
-    if: "contains(github.event.head_commit.message, '[patch]')"
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -22,7 +21,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Test git commit message
         run: |
-          echo '### Is Patch'
-          echo $(git log --format=%B -n 1 HEAD)
+          echo '### Get Type'
+          echo $(git log --format=%B -n 1 HEAD | awk -F '[][]' '{print $2}')
           
       # npx cut-release ${{ github.event.head_commit.message }}
