--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Release
 # Controls when the action will run.
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     
   workflow_dispatch:
 
