--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     environment: staging
-    if: contains(github.event.head_commit.message, /[[^]/)
+    if: contains(github.event.head_commit.message, '[patch]') || contains(github.event.head_commit.message, '[minor]')
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
