--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
     branches: [ main ]
     
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version: patch | minor | major'
+        required: true
+        default: 'patch'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,5 +27,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Test git commit message
         run: |
-          echo '### Get Type'
+          echo '### env var'
+          echo $INPUT_VERSION
+          echo '### commit message'
           echo $(git log --format=%B -n 1 HEAD | awk -F '[][]' '{print $2}')
