--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   test:
     runs-on: ubuntu-latest
-    environment: staging
-    if: contains(github.event.head_commit.message, '[patch]') || contains(github.event.head_commit.message, '[minor]')
+    # if: contains(github.event.head_commit.message, '[patch]') || contains(github.event.head_commit.message, '[minor]')
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
