--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
   # This workflow contains a single job called "build"
   test:
     runs-on: ubuntu-latest
+    env:
+      VERSION: ${{ github.event.inputs.version }}
     # if: contains(github.event.head_commit.message, '[patch]') || contains(github.event.head_commit.message, '[minor]')
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
