--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERSION: ${{ github.event.inputs.version }}
-    if: ${{ ['patch', 'minor', 'major'].indexOf(github.event.inputs.version) > -1 }}
+    if: contains(['patch', 'minor', 'major'], github.event.inputs.version)
     # if: contains(github.event.head_commit.message, '[patch]') || contains(github.event.head_commit.message, '[minor]')
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERSION: ${{ github.event.inputs.version }}
-    if: ${{ ['patch', 'minor', 'major'].indexOf(github.event.inputs.version) == -1 }}
+    if: !contains(['patch', 'minor', 'major'], github.event.inputs.version)
     steps:
       - name: Version supplied is not valid
         run: |
