--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           echo '### env var'
           echo $VERSION
+          echo 'butts'
           echo '### commit message'
           echo $(git log --format=%B -n 1 HEAD | awk -F '[][]' '{print $2}')
   error: 
